# mgds

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
dataLoader/: DebugDataLoaderModules.py  DiffusersDataLoaderModules.py  GenericDataLoaderModules.py  TrainDataSet.py  TransformersDataLoaderModules.py
src/mgds/: ConceptPipelineModule.py  DebugDataLoaderModules.py  DiffusersDataLoaderModules.py  GenericDataLoaderModules.py  LoadingPipeline.py  MGDS.py  OutputPipelineModule.py  PipelineModule.py  SettingsPipelineModule.py  TextEncoderBatching.py  TransformersDataLoaderModules.py
src/mgds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mgds/pipelineModuleTypes/: RandomAccessPipelineModule.py  SerialPipelineModule.py  SingleVariationRandomAccessPipelineModule.py
src/mgds/pipelineModules/: AspectBatchSorting.py  AspectBucketing.py  BatchPadding.py  CalcAspect.py  CapitalizeTags.py  CollectPaths.py  DecodeMoVQ.py  DecodeTokens.py  DecodeVAE.py  DiskCache.py  DistributedSampler.py  DownloadHuggingfaceDatasets.py  DropTags.py  EncodeAnimaText.py  EncodeClipText.py  EncodeGemmaText.py  EncodeIdeogramText.py  EncodeLensText.py  EncodeLlamaText.py  EncodeMistralText.py  EncodeMoVQ.py  EncodeQwenText.py  EncodeT5Text.py  EncodeVAE.py  GenerateDepth.py  GenerateImageLike.py  GenerateMaskedConditioningImage.py  GetFilename.py  ImageToVideo.py  InlineAspectBatchSorting.py  InlineDistributedSampler.py  KeepAspectCalculation.py  LoadImage.py  LoadMultipleTexts.py  LoadText.py  LoadVideo.py  MapData.py  ModifyPath.py  NormalizeImageChannels.py  PadMaskedTokens.py  (+28 more)
src/mgds/util/: FileUtil.py  PersistentCacheState.py
tests/: test_collect_paths.py  test_encode_qwen_batching.py  test_encode_text_batching.py  test_main.py  test_smartcache.py  test_smartcache_content_reuse.py  test_sourceless_parity.py  test_vae.py
