[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mgds"
dynamic = ["version"]
authors = [
  { name="Nerogar" },
]
description = "Modular Pytorch DataSet implementation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache License",
]

[project.urls]
Homepage = "https://github.com/Nerogar/mgds"
Issues = "https://github.com/Nerogar/mgds/issues"

[tool.setuptools_scm]

[tool.ruff]
extend-exclude = [
    # Exclude all third-party dependencies and environments.
    # NOTE: Conda installs mgds+diffusers into "src/" in the project directory.
    ".venv*",
    "venv*",
    "conda_env*",
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF"]
ignore = ["BLE001", "E402", "E501", "B024", "PGH003", "RET504", "RET505", "SIM102", "UP015", "PYI041"]

[tool.ruff.lint.isort.sections]
hf = ["diffusers*", "transformers*"]
mgds = ["mgds"]
torch = ["torch*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["modules"]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "mgds",
    "torch",
    "hf",
    "third-party",
    "local-folder",
]
